--- a/include/Makefile
+++ b/include/Makefile
@@ -18,7 +18,7 @@ INC=.
 SRC=$(BASE)/src/cpp
 BIN=$(BASE)/bin
 TEST=$(BASE)/test
-DATA=$(BASE)/data
+DATA=$(TEST)/data
 YAML=$(BASE)/libyaml
 LIB=$(PWD)/../lib
 TEST_SRC=$(TEST)/src
