--- a/include/Makefile
+++ b/include/Makefile
@@ -106,7 +106,7 @@ Visualization.o: Utils.o Quiver.o FieldViz.o
 Readers.o: Utils.o MDBase.o Atoms.o Time.o
 Atoms.o: Utils.o MDBase.o
 Writers.o: Utils.o
-Droplet.o: Utils.o Atoms.o CircleFit.o
+Droplet.o: Utils.o Atoms.o CircleFit.o Visualization.o
 Substrate.o: Utils.o Atoms.o
 Parameters.o: $(LIB)/libyaml.so Utils.o
 
