CircleFit.cpp -> Fitting.cpp. Monolayer fitting works, but not correctly just yet.

--- a/include/Makefile
+++ b/include/Makefile
@@ -102,11 +102,11 @@ $(cpp_obj): %.o: $(SRC)/%.cpp $(INC)/%.h
 	$(CXX) -o $@ -c $< $(CFLAGS)
 
 MDBase.o: Utils.o Parameters.o Time.o
-Visualization.o: Utils.o Quiver.o FieldViz.o CircleFit.o Droplet.o Substrate.o
+Visualization.o: Utils.o Quiver.o FieldViz.o Fitting.o Droplet.o Substrate.o
 Readers.o: Utils.o MDBase.o Atoms.o Time.o
 Atoms.o: Utils.o MDBase.o
 Writers.o: Utils.o
-Droplet.o: Utils.o Atoms.o CircleFit.o
+Droplet.o: Utils.o Atoms.o Fitting.o
 Substrate.o: Utils.o Atoms.o
 Parameters.o: $(LIB)/libyaml.so Utils.o
 
